# rust_minigrep

./: CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs  main.rs
