[package]
name = "minigrep"
version = "0.1.0"
edition = "2021"
authors = ["Zero <zhengsonglan001@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/yy1300326388/minigrep"
documentation = "https://docs.rs/minigrep"
homepage = "https://minigrep.github.io/book"
description = """
A simple command line tool written in Rust, which is similar to grep.
"""
keywords = ["cli", "grep"]
categories = ["algorithms", "no-std"]
autobenches = true
include = ["src/", "LICENSE-*", "README.md", "CHANGELOG.md", "COPYRIGHT"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
